--- a/API_Pokemon2/Evolutions/src/App.css
+++ b/API_Pokemon2/Evolutions/src/App.css
@@ -3,9 +3,50 @@
   padding: 0;
   box-sizing: border-box;
 }
+.App{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 24px;
+}
 .card-container{
   display: flex;
   gap: 10px;
+  width: 500px;
+  height: 300px;
+  margin-top: 80px;
+  position: relative;
+}
+  /* Estilos para la presentación de las tarjetas*/
+.card-container .card:nth-child(1){
+  position: absolute;
+  left: 0;
+  z-index: 3;
+  transition: 100ms;
+  transform: rotate(-5deg) translateY(10px);
+}
+.card-container .card:nth-child(1):hover{
+  transform: rotate(-5deg) translateY(0px);
+}
+.card-container .card:nth-child(2){
+  position: absolute;
+  left: 150px;
+  z-index: 2;
+  transition: 100ms;
+  transform: translateY(5px);
+}
+.card-container .card:nth-child(2):hover{
+  transform: translateY(-10px);
+}
+.card-container .card:nth-child(3){
+  position: absolute;
+  left: 300px;
+  z-index: 1;
+  transition: 100ms;
+  transform: rotate(5deg) translateY(10px);
+}
+.card-container .card:nth-child(3):hover{
+  transform: rotate(5deg) translateY(0px);
 }
 .btn-container{
   width: 300px;
