--- a/API_Pokemon2/Evolutions/src/App.css
+++ b/API_Pokemon2/Evolutions/src/App.css
@@ -48,6 +48,14 @@
 .card-container .card:nth-child(3):hover{
   transform: rotate(5deg) translateY(0px);
 }
+/* Variación de tarjetas cuando son menos de 3*/
+.card1{
+  transform: rotate(5.5deg) translate(150px);
+}
+.card2{
+  transform: rotate(4deg) translate(70px);
+}
+
 .btn-container{
   width: 300px;
   display: flex;
