--- a/API_Photos/Photos/src/App.css
+++ b/API_Photos/Photos/src/App.css
@@ -1,19 +1,18 @@
 .App{
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    gap: 24px;
-    position: relative;
+    flex-direction: column;
+    margin-top: 25px;
 }
 .photos-container{
     display: flex;
-    gap: 10px;
-    width: 300px;
-    height: 350px;
-    position: absolute;
+    gap: 20px;
+    max-width: 80%;
+    overflow-x: auto;
 }
 .btns{
-    
-    width: 100%;
-    flex-direction: column;
+    display: flex;
+    gap: 20px;
+    margin-top: 30px;
 }
