--- a/API_Comments/Comments/components/AllComments.css
+++ b/API_Comments/Comments/components/AllComments.css
@@ -7,13 +7,14 @@
     padding: 35px;
 }
 .comment{
-    font-size: 25px;
+    font-size: 20px;
+    padding: 0px 20px 0px 20px;
     text-align: center;
     font-style: oblique;
     color: #8B008B;
     display: grid;
     place-items: center;
-    margin-top: 50px;
+    height: 100px;
 }
 .btns{
     display: grid;
